--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,159 @@
-.App {
-  text-align: center;
+/*
+ * ress.css • v1.2.2
+ * MIT License
+ * github.com/filipelinhares/ress
+ */
+
+/*
+ * Fix
+ * Version 0.1.1
+ * https://github.com/jaydenseric/Fix
+*/
+
+/* # =================================================================
+   # Global selectors
+   # ================================================================= */
+
+html {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    overflow-y: scroll;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-tap-highlight-color: transparent;
+    font-size: 62.5%;
 }
 
-.App-logo {
-  height: 40vmin;
+*,
+::before,
+::after {
+    background-repeat: no-repeat;
+    box-sizing: inherit;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+::before,
+::after {
+    text-decoration: inherit;
+    vertical-align: inherit;
 }
 
-.App-link {
-  color: #09d3ac;
+* {
+    padding: 0;
+    margin: 0;
+    outline: 0;
+}
+
+
+/* # =================================================================
+   # General elements
+   # ================================================================= */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+    font-size: inherit;
+    text-rendering: optimizeLegibility;
+    font-weight: 400;
+}
+
+ul { list-style: none; }
+
+article,
+aside,
+figcaption,
+figure,
+footer,
+header,
+main,
+nav,
+section {
+    display: block;
+}
+
+[hidden],
+template {
+    display: none;
+}
+
+a {
+    background-color: transparent; 
+    -webkit-text-decoration-skip: objects;
+    text-decoration: none;
+    color: inherit;
+}
+
+a:active,
+a:hover {
+    outline-width: 0;
+}
+
+strong {
+    font-weight: 700;
+}
+
+
+/* # =================================================================
+   # Specify media element style
+   # ================================================================= */
+
+img {
+    border-style: none;
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+}
+
+svg:not(:root) {
+    overflow: hidden;
+}
+
+::-moz-focus-inner {
+    border: 0;
+    padding: 0;
+}
+
+
+/* google fonts */
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700|Ubuntu:400,700&display=swap');
+
+/*
+
+font-family: 'Roboto', sans-serif;
+
+font-family: 'Ubuntu', sans-serif;
+
+*/
+
+html, body, #root {
+  min-height: 100%;
+}
+
+body {
+  background-color: #E5E5E5;
+  color: #707070;
+  font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
+}
+
+label, input, select, textarea, button {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+}
+
+label {
+  font-size: 16px;
+  line-height: 20px;
+  color: #3A3A3A;
+}
+
+input {
+  font-size: 14px;
+  line-height: 16px;
+  color: #4F4F4F;
 }
